syntax = "proto3";

option java_package = "io.timemates.api.timers.requests";

message GetCurrentTimerSessionRequest {
  message Response {
    int64 timerId = 1;
  }
}